--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react-dom": "18.2.0",
     "@supabase/supabase-js": "2.38.0",
     "lucide-react": "0.294.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.5"
   }
 }
